[gd_scene load_steps=4 format=3 uid="uid://3wnsjd4ab5gm"]

[ext_resource type="Script" uid="uid://bn6xydblbi83g" path="res://game/level_2/scripts/tapper.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://game/level_2/scenes/tapperplayer.tscn" id="2_tyr23"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tyr23"]
size = Vector2(61, 220)

[node name="tapper-scene" type="Node2D"]
script = ExtResource("1_script")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(250, 90)

[node name="tapperplayer" parent="." instance=ExtResource("2_tyr23")]
position = Vector2(110, 81)
scale = Vector2(3, 3)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(161, 99)

[node name="PlayerArea" type="Area2D" parent="."]
position = Vector2(100, 95)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
shape = SubResource("RectangleShape2D_tyr23")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 200.0
offset_bottom = 40.0
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="."]
offset_top = 40.0
offset_right = 200.0
offset_bottom = 80.0
text = "Lives: 3"

[connection signal="body_entered" from="PlayerArea" to="." method="_on_player_area_body_entered"]
[connection signal="body_exited" from="PlayerArea" to="." method="_on_player_area_body_exited"]
